adding cross selling list to addItemToBasketOverlay

--- a/resources/views/content/AddItemToBasketOverlay.twig
+++ b/resources/views/content/AddItemToBasketOverlay.twig
@@ -25,11 +25,11 @@
                             <div class="col-md-12" style="min-height: 80px;">
                                 <p class="text-muted">Der Artikel wurde in den Warenkorb gelegt. Sie können nun Ihren Einkauf fortsetzen oder direkt zur Kasse gehen um den Bestellvorgang abzuschliessen.</p>    
                             </div>
-                            <!--
+                            
                             <div class="col-md-12">
                                 <slot name="cross-selling-accessory"></slot>
                                 <slot name="cross-selling-similar"></slot>
-                            </div>-->
+                            </div>
                             <div class="col-md-4" style="min-height: 80px;">
                                 <img style="max-height: 140px;" class="img-fluid mx-auto" :src="imageUrl" :alt="imageAlternativeText || itemName" :title="itemName"/>
                             </div>
