--- a/resources/views/content/AddItemToBasketOverlay.twig
+++ b/resources/views/content/AddItemToBasketOverlay.twig
@@ -26,6 +26,7 @@
                                 <p class="text-muted">Der Artikel wurde in den Warenkorb gelegt. Sie können nun Ihren Einkauf fortsetzen oder direkt zur Kasse gehen um den Bestellvorgang abzuschliessen.</p>    
                             </div>
                             <div class="col-md-12">
+                                Test text
                                 <slot name="cross-selling-accessory"></slot>
                                 <slot name="cross-selling-similar"></slot>
                             </div>
