--- a/resources/views/content/AddItemToBasketOverlay.twig
+++ b/resources/views/content/AddItemToBasketOverlay.twig
@@ -27,8 +27,8 @@
                             </div>
                             <div class="col-md-12">
                                 Test text
-                                <slot name="cross-selling-accessory"></slot>
-                                <slot name="cross-selling-similar"></slot>
+                                {{component("WasdazuTheme::Templates.CrossSellingAccessory")}}
+                                {{component("WasdazuTheme::Templates.CrossSellingSimilar")}}
                             </div>
                         </div>
                     </div>
