--- a/resources/views/Templates/CrossSellingAccessory.twig
+++ b/resources/views/Templates/CrossSellingAccessory.twig
@@ -1,4 +1,4 @@
-<template #cross-selling-accessory>
+<script type="x/template" id="cross-selling-accessory">
     {% if accessory|length > 0 %}
           <div class="crossSelling">
             <hr>
@@ -27,4 +27,4 @@
     {% else %}
       <p>Keine Zubehör Produkte gefunden</p>
     {% endif %}
-</template>
+</script>
